# cgal

AABB_tree/include/CGAL/: AABB_tree.h
AABB_tree/include/CGAL/internal/AABB_tree/: AABB_node.h  AABB_traversal_traits.h
Intersections_3/include/CGAL/Intersections_3/internal/: Bbox_3_Segment_3_do_intersect.h
Intersections_3/test/Intersections_3/: bbox_bbox_intersection.cpp
Kernel_23/include/CGAL/: Bbox_3.h
Mesh_3/examples/Mesh_3/: remesh_polyhedral_surface_sm.cpp
Polygon_mesh_processing/include/CGAL/Polygon_mesh_processing/internal/Side_of_triangle_mesh/: Ray_3_Triangle_3_traversal_traits.h
_simd-experiments/cgal-ray-bbox-intersections/: CMakeLists.txt  main.cpp
_simd-experiments/cgal-ray-shooting/: CMakeLists.txt
